Fixed some layout issues

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -16,6 +16,7 @@ p {
 }
 
 a {
+  color: $dark-primary;
   text-decoration: none;
 }
 
