--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -46,6 +46,7 @@
     }
   }
   .user-links {
+    width: 20rem;
     text-align: center;
   }
 }
@@ -55,7 +56,7 @@
 }
 
 .user-videos {
-  width: 40rem;
+  width: 35rem;
   height: 15rem;
   overflow: scroll;
 }
